fixed z-index

--- a/main.css
+++ b/main.css
@@ -1279,6 +1279,7 @@ max-width: 60%;*/
     width: 100%;
     height: 20%;
     margin:0;
+    z-index: 2;
 }
 
 .iconsNavigation {
@@ -1305,6 +1306,7 @@ max-width: 60%;*/
     margin-top: 5%;
     padding-left: 4%;
     background-color: white;
+    z-index: 2;
 }
 
 #endNavigation {
